improved documentation and routes
